--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   <%= @user.email %>
 </p>
 
-<p><%= @user.tweets.first.content %></p>
+<p><%= @user.tweets.first.content if @user.tweets.first.present? %></p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
